Improve ancestors alignment, refactor code